# SeggerRTT-printf

./: .cfxs-build  CMakeLists.txt
include/: SEGGER_RTT_Conf.h
src/: SEGGER_RTT.c  SEGGER_RTT_SES.c
